add invoiceCalc to html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="calcValue.js"></script>
+    <script src="invoiceCalc.js"></script>
 </head>
 
 <body>
