renamed invoice to total

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             </div>
             <div class="row">
                 <div class="col-3">
-                    <label for="invoice">invoice:</label>
+                    <label for="total">invoice:</label>
                 </div>
                 <div class="col">
-                    <input type="text" name="invoice" id="invoice" disabled>
+                    <input type="text" name="total" id="total" disabled>
                 </div>
             </div>
             <div class="row mt-2">
